[package]
name = "blog_os"
version = "0.1.0"
edition = "2021"
authors = ["BOBY SHARMA <helloflixofficial@gmail.com>"]


# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.9.8"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
volatile = "=0.2.6"
